@@ -1,5 +1,17 @@
 2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03127] X-Face
+	* NEWS: X-Face support
+	* configure (use_xface): added
+	* config.h.dist (USE_XFACE): added
+		(XFACE2XBM): added
+	* file.c (xface2xbm): added
+		(readHeader): X-Face: handling
+	* scripts/Makefile (LIB_TARGETS): add xface2xbm
+	* scripts/xface2xbm.in: added
+
+2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03126] reshapeBuffer() and -m option
 	* buffer.c (reshapeBuffer): fix reshapeBuffer() in case of -m option
 
